logs/Slang/generic/typedef/typedef_test_15.sv.log
name: typedef_test_15
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_15.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_15.sv:8:9: error: expected data type (implicit type name not allowed)
  [4:0] some_member;
        ^
